--- a/Final Site.css
+++ b/Final Site.css
@@ -153,7 +153,7 @@ nav .start-home,a:nth-child(1):hover~.animation{
 .info .box a{
 	color: rgb(16, 4, 83);
 	font-size: 25px;
-	border-bottom: 2px solid rgba(26,89,120,0.9);
+	/*border-bottom: 2px solid rgba(26,89,120,0.9);*/
 }
 	.info .box p {
 		color: black;
