--- a/main.css
+++ b/main.css
@@ -4,5 +4,5 @@
 
 }
 body{
-background-image: url('https://developer.nandysagar.in/background.gif');
+background-image: url('https://developer.nandysagar.in/backgroud%202.gif');
 }
